Agregando la pantalla de anuncios cercanos y obtencion de paises mediante JSON en la pantalla de registro.